...
// Renders the help text content.
export default function HelpItemsContent() {
  return (
    <View>
      <Text style={styles.subheading}>Tabs</Text>
      {bold_then_item(
        "Camera",
        ": Take a photo first, then place it on the floorplan."
      )}
      {bold_then_item(
        "Floorplan",
        ": Select floorplan, place markers, add photos, view photos."
      )}
      <Text style={styles.subheading}>Floorplan start</Text>
      {item("1. Open Floorplan.")}
      {item("2. If no floorplan is selected, press Add from gallery.")}
      {item("3. Pick a floorplan image.")}
...
