appId: "com.anonymous.p8mobility"
---
- launchApp:
    appId: "com.anonymous.p8mobility"
- assertVisible:
    text: "Camera"
    index: 0
- assertVisible:
    text: "Floorplan"
- assertVisible:
    text: "Main page"
- assertVisible:
    text: "debug"

# Test navigation to Main page
- tapOn: "Main page"
- assertVisible: "Welcome to our very Hygge App"

# Test navigation to Camera
- tapOn: "Camera"
- assertVisible:
    id: "camera-view"
    optional: true

# Test navigation to Floorplan
- tapOn: "Floorplan"
- assertVisible:
    text: "Upload Image"
    optional: true

# Test navigation to Debug
- tapOn: "debug"
- assertVisible:
    text: "Debug"
    optional: true

# Return to main page
- tapOn: "Main page"
- assertVisible: "Welcome to our very Hygge App"
